<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="about_settings_summary">Source code, share &amp; version</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">The theme accent color, defaults to green</string>
    <string name="action_about">About</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_clear_playlist">Clear playlist</string>
    <string name="action_cycle_repeat">Cycle repeat mode</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_genre">Go to genre</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="action_new_playlist">New playlist</string>
    <string name="action_next">Next</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_rename">Rename</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_scan">Scan</string>
    <string name="action_search">Search</string>
    <string name="action_set">Start</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_sort_order">Sort order</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_toggle_favorite">Toggle favorite</string>
    <string name="action_toggle_shuffle">Toggle shuffle mode</string>
    <string name="adaptive">Adaptive</string>
    <string name="add_action">Add</string>
    <string name="add_lyrics">Add lyrics</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="add_time_framed_lryics">Add time frame lyrics</string>
    <string name="added_title_to_playing_queue">Added 1 title to the playing queue</string>
    <plurals name="added_x_titles_to_playing_queue">
        <item quantity="other">Added <xliff:g id="count">%1$d</xliff:g> titles to the playing queue</item>
    </plurals>
    <string name="album">Album</string>
    <string name="album_artist">Album artist</string>
    <string name="albums">Albums</string>
    <plurals name="albums_x">
        <item quantity="other">albums</item>
    </plurals>
    <string name="always">Always</string>
    <string name="app_share">Hey check out this cool music player at: https://github.com/MaxFour/Music-Player-2/releases</string>
    <string name="app_name">Music</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_songs_short">Top songs</string>
    <string name="app_widget_big_name">Music - Big</string>
    <string name="app_widget_card_name">Music - Card</string>
    <string name="app_widget_classic_name">Music - Classic</string>
    <string name="app_widget_small_name">Music - Small</string>
    <string name="app_widget_text_name">Music - Text</string>
    <string name="apply">Apply</string>
    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="audio_focus_denied">Audio focus denied</string>
    <string name="audio_settings_summary">Change the sound settings and adjust the equalizer controls</string>
    <string name="auto">Auto</string>
    <string name="bio">Bio</string>
    <string name="biography">Biography</string>
    <string name="black_theme_name">Just black</string>
    <string name="blacklist">Blacklist</string>
    <string name="blur">Blur</string>
    <string name="blur_card">Blur Card</string>
    <string name="cancel_current_timer">Cancel</string>
    <string name="card">Card</string>
    <string name="card_circular_style">Circular</string>
    <string name="card_color_style">Colored Card</string>
    <string name="card_style">Card</string>
    <string name="cascading">Cascading</string>
    <string name="circular">Circular</string>
    <string name="clear_action">Clear</string>
    <string name="clear_blacklist">Clear blacklist</string>
    <string name="clear_playing_queue">Clear queue</string>
    <string name="clear_playlist_title">Clear playlist</string>
    <string name="clear_playlist_x"><![CDATA[Clear the playlist <b>%1$s</b>? This can\u2019t be undone!]]></string>
    <string name="close_notification">Close</string>
    <string name="color">Color</string>
    <string name="colors">Colors</string>
    <string name="composer">Composer</string>
    <string name="could_not_create_playlist">Couldn’t create playlist</string>
    <string name="could_not_download_album_cover">Couldn’t download a matching album cover</string>
    <string name="could_not_scan_files">Could not scan %d files</string>
    <string name="create_action">Create</string>
    <string name="created_playlist_x">Created playlist %1$s</string>
    <string name="currently_listening_to_x_by_x">Currently listening to %1$s by %2$s</string>
    <string name="dark_theme_name">Kinda Dark</string>
    <string name="delete_playlist_title">Delete playlist</string>
    <string name="delete_playlist_x"><![CDATA[Delete the playlist <b>%1$s</b>?]]></string>
    <string name="delete_playlists_title">Delete playlists</string>
    <string name="delete_song_title">Delete song</string>
    <string name="delete_song_x"><![CDATA[Delete the song <b>%1$s</b>?]]></string>
    <string name="delete_songs_title">Delete songs</string>
    <plurals name="delete_x_playlists">
        <item quantity="other"><![CDATA[Delete <b>%1$d</b> playlists?]]></item>
    </plurals>
    <plurals name="delete_x_songs">
        <item quantity="other"><![CDATA[Delete <b><xliff:g id="count">%1$d</xliff:g></b> songs?]]></item>
    </plurals>
    <plurals name="deleted_x_songs">
        <item quantity="one">Deleted <xliff:g id="count">%1$d</xliff:g> song</item>
        <item quantity="other">Deleted <xliff:g id="count">%1$d</xliff:g> songs</item>
    </plurals>
    <string name="deleting_songs">Deleting songs</string>
    <string name="depth">Depth</string>
    <string name="dialog_message_set_ringtone">Allow Music to modify audio settings</string>
    <string name="dialog_title_set_ringtone">Set ringtone</string>
    <string name="do_you_want_to_clear_the_blacklist">Do you want to clear the blacklist?</string>
    <string name="do_you_want_to_remove_from_the_blacklist"><![CDATA[Do you want to remove <b>%1$s</b> from the blacklist?]]></string>
    <string name="edit">Edit</string>
    <string name="empty">Empty</string>
    <string name="equalizer">Equalizer</string>
    <string name="favorites">Favorites</string>
    <string name="finish_last_song">Finish last song</string>
    <string name="fit">Fit</string>
    <string name="flat">Flat</string>
    <string name="folders">Folders</string>
    <string name="follow_system">Follow system</string>
    <string name="for_you">For you</string>
    <string name="full">Full</string>
    <string name="full_card">Full card</string>
    <string name="general_settings_summary">Change the theme and colors of the app</string>
    <string name="general_settings_title">Look and feel</string>
    <string name="genre">Genre</string>
    <string name="genres">Genres</string>
    <string name="git_hub_summary">Fork the project on GitHub</string>
    <string name="grid_style_label"><![CDATA[Grids & Style]]></string>
    <string name="hinge">Hinge</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="horizontal_flip">Horizontal flip</string>
    <string name="image">Image</string>
    <string name="image_gradient">Gradient image</string>
    <string name="image_settings_summary">Change artist image download settings</string>
    <plurals name="inserted_x_songs_into_playlist_x">
        <item quantity="one">Inserted <xliff:g id="count">%1$d</xliff:g> song into the playlist \"%2$s\"</item>
        <item quantity="other">Inserted <xliff:g id="count">%1$d</xliff:g> songs into the playlist \"%2$s\"</item>
    </plurals>
    <string name="keyboard">Keyboard</string>
    <string name="label_bit_rate">Bitrate</string>
    <string name="label_file_format">Format</string>
    <string name="label_file_name">File name</string>
    <string name="label_file_path">File path</string>
    <string name="label_file_size">Size</string>
    <string name="label_more_from">More from %s</string>
    <string name="label_sampling_rate">Sampling rate</string>
    <string name="label_song_length">Length</string>
    <string name="labeled">Labeled</string>
    <string name="last_added">Last added</string>
    <string name="last_song">Last song</string>
    <string name="library">Library</string>
    <string name="library_categories">Library categories</string>
    <string name="light_theme_name">Clearly White</string>
    <string name="listing_files">Listing files</string>
    <string name="lyrics">Lyrics</string>
    <string name="material">Material</string>
    <string name="md_error_label">Error</string>
    <string name="md_storage_perm_error">Permission error</string>
    <string name="my_name">Name</string>
    <string name="my_top_songs">Most played</string>
    <string name="never">Never</string>
    <string name="new_banner_photo">New banner photo</string>
    <string name="new_playlist_title">New playlist</string>
    <string name="new_profile_photo">New profile photo</string>
    <string name="new_start_directory">%s is the new start directory</string>
    <string name="next_song">Next Song</string>
    <string name="no_albums">You have no albums</string>
    <string name="no_artists">You have no artists</string>
    <string name="no_audio_ID">Play a song first, then try again</string>
    <string name="no_equalizer">No equalizer found</string>
    <string name="no_genres">You have no genres</string>
    <string name="no_lyrics_found">No lyrics found</string>
    <string name="now_playing">Now playing</string>
    <string name="now_playing_summary">Customize the now playing screen</string>
    <string name="personalize">Personalize</string>
    <string name="personalize_settings_summary">Customize your now playing and UI controls</string>
    <string name="pref_header_album">Album style</string>
    <string name="pref_header_audio">Audio</string>
    <string name="pref_title_album_cover_style">Album cover theme</string>
    <string name="pref_title_album_grid_style">Album grid</string>
    <string name="pref_title_artist_grid_style">Artist grid</string>
    <string name="pref_title_now_playing_screen_appearance">Now playing theme</string>
</resources>