<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_play_next"
        android:title="@string/action_play_next"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove_from_playing_queue"
        android:title="@string/action_remove_from_playing_queue"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_to_playlist"
        android:title="@string/action_add_to_playlist"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_go_to_album"
        android:title="@string/action_go_to_album"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_go_to_artist"
        androi