<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.maxfour.libreplayer.views.SettingListItemView
            android:id="@+id/generalSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:settingListItemIcon="@drawable/ic_theme_palette_white_24dp"
            app:settingListItemIconColor="@color/md_blue_A400"
            app:settingListItemText="@string/general_settings_summary"
            app:settingListItemTitle="@string/general_settings_title" />

        <com.maxfour.libreplayer.views.SettingListItemView
            android:id="@+id/nowPlayingSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:settingListItemIcon="@drawable/ic_play_circle_filled_white_24dp"
            app:settingListItemIconColor="@color/md_red_A400"
            app:settingListItemText="@string/now_playing_summary"
            app:settingListItemTitle="@string/now_playing" />

        <com.maxfour.libreplayer.views.SettingListItemView
            android:id="@+id/audioSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:settingListItemIcon="@drawable/ic_volume_up_white_24dp"
            app:settingListItemIconColor="@color/md_deep_purple_A400"
            app:settingListItemText="@string/audio_settings_summary"
            app:settingListItemTitle="@string/pref_header_audio" />

        <com.maxfour.libreplayer.views.SettingListItemView
            android:id="@+id/personalizeSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:settingListItemIcon="@drawable/ic_hdr_strong_white_24dp"
            app:settingListItemIconColor="@color/md_teal_A400"
            app:settingListItemText="@string/personalize_settings_summary"
            app:settingListItemTitle="@string/personalize" />

        <com.maxfour.libreplayer.views.SettingListItemView
            android:id="@+id/imageSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:settingListItemIcon="@drawable/ic_image_white_24dp"
            app:settingListIte