<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.maxfour.libreplayer.preferences.NowPlayingScreenPreference
        android:key="now_playing_screen_id"
        android:layout="@layout/list_item_view"
        android:title="@string/pref_title_now_playing_screen_appearance"
        app:icon="@drawable/ic_play_circle_filled_white_24dp" />

    <com.maxfour.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:title="@string/pref_header_album">

        <com.maxfour.libreplayer.preferences.AlbumCoverStylePreference
            android:key="album_cover_style_id"
            android:layout="@layout/list_item_view"
            android:title="@string/pref_title_album_cover_style"
            app:icon="@drawable/ic_image_white_24dp" />

        <com.maxfour.libreplayer.preferences.MaterialListPreference
            android:defaultValue="0"
            android:entries="@array/pref_album_cover_transform_entities"
            android:entryValues="@array/pref_album_cover_transform_values"
            android:key="album_cover_transform"
            android:layout="@layout/list_item_view"
          